--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ body {
   padding: 16px 12px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  scrollbar-color: #555555 #292929;
+  scrollbar-color: #555555 transparent;
   scrollbar-width: thin;
 }
 .comments__empty {
@@ -106,7 +106,7 @@ body {
 }
 .comments::-webkit-scrollbar {
   width: 12px;
-  background-color: #292929;
+  background-color: transparent;
   border-radius: 6px;
 }
 .comments::-webkit-scrollbar-thumb {
