--- a/styles.scss
+++ b/styles.scss
@@ -110,7 +110,7 @@ body {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
-  scrollbar-color: #555555 #292929;
+  scrollbar-color: #555555 transparent;
   scrollbar-width: thin;
 
   &__empty {
@@ -120,7 +120,7 @@ body {
 
   &::-webkit-scrollbar {
     width: 12px;
-    background-color: #292929;
+    background-color: transparent;
     border-radius: 6px;
   }
 
